Migration to JDK 21. Major updates dependencies. Include default SOAPHandler. Naming change from Infor to EAM